# darknet_ros

./: .gitmodules  CMakeLists.txt  README.md  package.xml
launch/: object_detect.launch
src/: object_detect.cpp
srv/: ImageDetection.srv
